chore(finance): 生成汇率接口绑定代码
