# server/api/finance/v1/exchange_rate_grpc.pb.go
@@ -1,0 +1,239 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             (unknown)
+// source: finance/v1/exchange_rate.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	ExchangeRateService_ListExchangeRateSettings_FullMethodName   = "/finance.v1.ExchangeRateService/ListExchangeRateSettings"
+	ExchangeRateService_CreateExchangeRateSetting_FullMethodName  = "/finance.v1.ExchangeRateService/CreateExchangeRateSetting"
+	ExchangeRateService_UpdateExchangeRateSetting_FullMethodName  = "/finance.v1.ExchangeRateService/UpdateExchangeRateSetting"
+	ExchangeRateService_DisableExchangeRateSetting_FullMethodName = "/finance.v1.ExchangeRateService/DisableExchangeRateSetting"
+)
+
+// ExchangeRateServiceClient is the client API for ExchangeRateService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// ExchangeRateService 维护订单费用结算汇率主数据。
+type ExchangeRateServiceClient interface {
+	ListExchangeRateSettings(ctx context.Context, in *ListExchangeRateSettingsRequest, opts ...grpc.CallOption) (*ListExchangeRateSettingsResponse, error)
+	CreateExchangeRateSetting(ctx context.Context, in *CreateExchangeRateSettingRequest, opts ...grpc.CallOption) (*CreateExchangeRateSettingResponse, error)
+	UpdateExchangeRateSetting(ctx context.Context, in *UpdateExchangeRateSettingRequest, opts ...grpc.CallOption) (*UpdateExchangeRateSettingResponse, error)
+	DisableExchangeRateSetting(ctx context.Context, in *DisableExchangeRateSettingRequest, opts ...grpc.CallOption) (*DisableExchangeRateSettingResponse, error)
+}
+
+type exchangeRateServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewExchangeRateServiceClient(cc grpc.ClientConnInterface) ExchangeRateServiceClient {
+	return &exchangeRateServiceClient{cc}
+}
+
+func (c *exchangeRateServiceClient) ListExchangeRateSettings(ctx context.Context, in *ListExchangeRateSettingsRequest, opts ...grpc.CallOption) (*ListExchangeRateSettingsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListExchangeRateSettingsResponse)
+	err := c.cc.Invoke(ctx, ExchangeRateService_ListExchangeRateSettings_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *exchangeRateServiceClient) CreateExchangeRateSetting(ctx context.Context, in *CreateExchangeRateSettingRequest, opts ...grpc.CallOption) (*CreateExchangeRateSettingResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateExchangeRateSettingResponse)
+	err := c.cc.Invoke(ctx, ExchangeRateService_CreateExchangeRateSetting_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *exchangeRateServiceClient) UpdateExchangeRateSetting(ctx context.Context, in *UpdateExchangeRateSettingRequest, opts ...grpc.CallOption) (*UpdateExchangeRateSettingResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateExchangeRateSettingResponse)
+	err := c.cc.Invoke(ctx, ExchangeRateService_UpdateExchangeRateSetting_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *exchangeRateServiceClient) DisableExchangeRateSetting(ctx context.Context, in *DisableExchangeRateSettingRequest, opts ...grpc.CallOption) (*DisableExchangeRateSettingResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DisableExchangeRateSettingResponse)
+	err := c.cc.Invoke(ctx, ExchangeRateService_DisableExchangeRateSetting_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ExchangeRateServiceServer is the server API for ExchangeRateService service.
+// All implementations must embed UnimplementedExchangeRateServiceServer
+// for forward compatibility.
+//
+// ExchangeRateService 维护订单费用结算汇率主数据。
+type ExchangeRateServiceServer interface {
+	ListExchangeRateSettings(context.Context, *ListExchangeRateSettingsRequest) (*ListExchangeRateSettingsResponse, error)
+	CreateExchangeRateSetting(context.Context, *CreateExchangeRateSettingRequest) (*CreateExchangeRateSettingResponse, error)
+	UpdateExchangeRateSetting(context.Context, *UpdateExchangeRateSettingRequest) (*UpdateExchangeRateSettingResponse, error)
+	DisableExchangeRateSetting(context.Context, *DisableExchangeRateSettingRequest) (*DisableExchangeRateSettingResponse, error)
+	mustEmbedUnimplementedExchangeRateServiceServer()
+}
+
+// UnimplementedExchangeRateServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedExchangeRateServiceServer struct{}
+
+func (UnimplementedExchangeRateServiceServer) ListExchangeRateSettings(context.Context, *ListExchangeRateSettingsRequest) (*ListExchangeRateSettingsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListExchangeRateSettings not implemented")
+}
+func (UnimplementedExchangeRateServiceServer) CreateExchangeRateSetting(context.Context, *CreateExchangeRateSettingRequest) (*CreateExchangeRateSettingResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateExchangeRateSetting not implemented")
+}
+func (UnimplementedExchangeRateServiceServer) UpdateExchangeRateSetting(context.Context, *UpdateExchangeRateSettingRequest) (*UpdateExchangeRateSettingResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateExchangeRateSetting not implemented")
+}
+func (UnimplementedExchangeRateServiceServer) DisableExchangeRateSetting(context.Context, *DisableExchangeRateSettingRequest) (*DisableExchangeRateSettingResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method DisableExchangeRateSetting not implemented")
+}
+func (UnimplementedExchangeRateServiceServer) mustEmbedUnimplementedExchangeRateServiceServer() {}
+func (UnimplementedExchangeRateServiceServer) testEmbeddedByValue()                             {}
+
+// UnsafeExchangeRateServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ExchangeRateServiceServer will
+// result in compilation errors.
+type UnsafeExchangeRateServiceServer interface {
+	mustEmbedUnimplementedExchangeRateServiceServer()
+}
+
+func RegisterExchangeRateServiceServer(s grpc.ServiceRegistrar, srv ExchangeRateServiceServer) {
+	// If the following call panics, it indicates UnimplementedExchangeRateServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&ExchangeRateService_ServiceDesc, srv)
+}
+
+func _ExchangeRateService_ListExchangeRateSettings_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListExchangeRateSettingsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExchangeRateServiceServer).ListExchangeRateSettings(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExchangeRateService_ListExchangeRateSettings_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExchangeRateServiceServer).ListExchangeRateSettings(ctx, req.(*ListExchangeRateSettingsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ExchangeRateService_CreateExchangeRateSetting_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateExchangeRateSettingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExchangeRateServiceServer).CreateExchangeRateSetting(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExchangeRateService_CreateExchangeRateSetting_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExchangeRateServiceServer).CreateExchangeRateSetting(ctx, req.(*CreateExchangeRateSettingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ExchangeRateService_UpdateExchangeRateSetting_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateExchangeRateSettingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExchangeRateServiceServer).UpdateExchangeRateSetting(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExchangeRateService_UpdateExchangeRateSetting_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExchangeRateServiceServer).UpdateExchangeRateSetting(ctx, req.(*UpdateExchangeRateSettingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ExchangeRateService_DisableExchangeRateSetting_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DisableExchangeRateSettingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ExchangeRateServiceServer).DisableExchangeRateSetting(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ExchangeRateService_DisableExchangeRateSetting_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ExchangeRateServiceServer).DisableExchangeRateSetting(ctx, req.(*DisableExchangeRateSettingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ExchangeRateService_ServiceDesc is the grpc.ServiceDesc for ExchangeRateService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ExchangeRateService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "finance.v1.ExchangeRateService",
+	HandlerType: (*ExchangeRateServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "ListExchangeRateSettings",
+			Handler:    _ExchangeRateService_ListExchangeRateSettings_Handler,
+		},
+		{
+			MethodName: "CreateExchangeRateSetting",
+			Handler:    _ExchangeRateService_CreateExchangeRateSetting_Handler,
+		},
+		{
+			MethodName: "UpdateExchangeRateSetting",
+			Handler:    _ExchangeRateService_UpdateExchangeRateSetting_Handler,
+		},
+		{
+			MethodName: "DisableExchangeRateSetting",
+			Handler:    _ExchangeRateService_DisableExchangeRateSetting_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "finance/v1/exchange_rate.proto",
+}
