# server/api/finance/v1/exchange_rate_http.pb.go
@@ -1,0 +1,202 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: finance/v1/exchange_rate.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v3/transport/http"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+
+const _ = http.SupportPackageIsVersion3
+
+const OperationExchangeRateServiceCreateExchangeRateSetting = "/finance.v1.ExchangeRateService/CreateExchangeRateSetting"
+const OperationExchangeRateServiceDisableExchangeRateSetting = "/finance.v1.ExchangeRateService/DisableExchangeRateSetting"
+const OperationExchangeRateServiceListExchangeRateSettings = "/finance.v1.ExchangeRateService/ListExchangeRateSettings"
+const OperationExchangeRateServiceUpdateExchangeRateSetting = "/finance.v1.ExchangeRateService/UpdateExchangeRateSetting"
+
+type ExchangeRateServiceHTTPServer interface {
+	CreateExchangeRateSetting(context.Context, *CreateExchangeRateSettingRequest) (*CreateExchangeRateSettingResponse, error)
+	DisableExchangeRateSetting(context.Context, *DisableExchangeRateSettingRequest) (*DisableExchangeRateSettingResponse, error)
+	ListExchangeRateSettings(context.Context, *ListExchangeRateSettingsRequest) (*ListExchangeRateSettingsResponse, error)
+	UpdateExchangeRateSetting(context.Context, *UpdateExchangeRateSettingRequest) (*UpdateExchangeRateSettingResponse, error)
+}
+
+func RegisterExchangeRateServiceHTTPServer(s *http.Server, srv ExchangeRateServiceHTTPServer) {
+	r := s.Route("/")
+	r.Handle("GET", "/api/v1/finance/exchange-rates", _ExchangeRateService_ListExchangeRateSettings0_HTTP_Handler(srv))
+	r.Handle("POST", "/api/v1/finance/exchange-rates", _ExchangeRateService_CreateExchangeRateSetting0_HTTP_Handler(srv))
+	r.Handle("PUT", "/api/v1/finance/exchange-rates/{id}", _ExchangeRateService_UpdateExchangeRateSetting0_HTTP_Handler(srv))
+	r.Handle("POST", "/api/v1/finance/exchange-rates/{id}/disable", _ExchangeRateService_DisableExchangeRateSetting0_HTTP_Handler(srv))
+}
+
+func _ExchangeRateService_ListExchangeRateSettings0_HTTP_Handler(srv ExchangeRateServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListExchangeRateSettingsRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExchangeRateServiceListExchangeRateSettings)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListExchangeRateSettings(ctx, req.(*ListExchangeRateSettingsRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListExchangeRateSettingsResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ExchangeRateService_CreateExchangeRateSetting0_HTTP_Handler(srv ExchangeRateServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateExchangeRateSettingRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExchangeRateServiceCreateExchangeRateSetting)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateExchangeRateSetting(ctx, req.(*CreateExchangeRateSettingRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CreateExchangeRateSettingResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ExchangeRateService_UpdateExchangeRateSetting0_HTTP_Handler(srv ExchangeRateServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateExchangeRateSettingRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExchangeRateServiceUpdateExchangeRateSetting)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateExchangeRateSetting(ctx, req.(*UpdateExchangeRateSettingRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateExchangeRateSettingResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ExchangeRateService_DisableExchangeRateSetting0_HTTP_Handler(srv ExchangeRateServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in DisableExchangeRateSettingRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExchangeRateServiceDisableExchangeRateSetting)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.DisableExchangeRateSetting(ctx, req.(*DisableExchangeRateSettingRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*DisableExchangeRateSettingResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type ExchangeRateServiceHTTPClient interface {
+	CreateExchangeRateSetting(ctx context.Context, req *CreateExchangeRateSettingRequest, opts ...http.CallOption) (rsp *CreateExchangeRateSettingResponse, err error)
+	DisableExchangeRateSetting(ctx context.Context, req *DisableExchangeRateSettingRequest, opts ...http.CallOption) (rsp *DisableExchangeRateSettingResponse, err error)
+	ListExchangeRateSettings(ctx context.Context, req *ListExchangeRateSettingsRequest, opts ...http.CallOption) (rsp *ListExchangeRateSettingsResponse, err error)
+	UpdateExchangeRateSetting(ctx context.Context, req *UpdateExchangeRateSettingRequest, opts ...http.CallOption) (rsp *UpdateExchangeRateSettingResponse, err error)
+}
+
+type ExchangeRateServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewExchangeRateServiceHTTPClient(client *http.Client) ExchangeRateServiceHTTPClient {
+	return &ExchangeRateServiceHTTPClientImpl{client}
+}
+
+func (c *ExchangeRateServiceHTTPClientImpl) CreateExchangeRateSetting(ctx context.Context, in *CreateExchangeRateSettingRequest, opts ...http.CallOption) (*CreateExchangeRateSettingResponse, error) {
+	var out CreateExchangeRateSettingResponse
+	pattern := "/api/v1/finance/exchange-rates"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationExchangeRateServiceCreateExchangeRateSetting),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ExchangeRateServiceHTTPClientImpl) DisableExchangeRateSetting(ctx context.Context, in *DisableExchangeRateSettingRequest, opts ...http.CallOption) (*DisableExchangeRateSettingResponse, error) {
+	var out DisableExchangeRateSettingResponse
+	pattern := "/api/v1/finance/exchange-rates/{id}/disable"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationExchangeRateServiceDisableExchangeRateSetting),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ExchangeRateServiceHTTPClientImpl) ListExchangeRateSettings(ctx context.Context, in *ListExchangeRateSettingsRequest, opts ...http.CallOption) (*ListExchangeRateSettingsResponse, error) {
+	var out ListExchangeRateSettingsResponse
+	pattern := "/api/v1/finance/exchange-rates"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationExchangeRateServiceListExchangeRateSettings),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ExchangeRateServiceHTTPClientImpl) UpdateExchangeRateSetting(ctx context.Context, in *UpdateExchangeRateSettingRequest, opts ...http.CallOption) (*UpdateExchangeRateSettingResponse, error) {
+	var out UpdateExchangeRateSettingResponse
+	pattern := "/api/v1/finance/exchange-rates/{id}"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationExchangeRateServiceUpdateExchangeRateSetting),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
